Fix Toast width on mobile devices with 280px < widths < 450px. Fixes #97

--- a/src/main/resources/static/css/toasts/toast.css
+++ b/src/main/resources/static/css/toasts/toast.css
@@ -13,6 +13,12 @@
   z-index: 1030;
 }
 
+@media (max-width: 450px) {
+  .toast {
+    width: 360px !important;
+  }
+}
+
 @media (max-width: 280px) {
   .toast {
     width: 265px !important;
